--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -4,31 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:rowCount="2"
     android:columnCount="2"
-    android:layout_columnWeight="1"
-    android:gravity="fill"
-    tools:context="com.example.neilg_000.androidlabs.ListItemsActivity">
+    android:rowCount="2"
+    tools:context="com.example.neilg_000.androidlabs.LoginActivity">
 
     <RadioButton
-        android:layout_height="wrap_content"
+        android:id="@+id/radioButton"
         android:layout_width="wrap_content"
-        />
+        android:layout_height="wrap_content"
+        android:text="radiobutton"
+        android:layout_columnWeight="1"
+        android:gravity="fill" />
+
     <CheckBox
-        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
         android:layout_width="wrap_content"
-        />
+        android:layout_height="wrap_content"
+        android:text="checkenboxen"
+        android:layout_columnWeight="1"
+        android:gravity="fill" />
+
     <Switch
-        android:layout_height="wrap_content"
+        android:id="@+id/switch1"
         android:layout_width="wrap_content"
-        android:text="What does this do? "
-        />
+        android:layout_height="wrap_content"
+        android:text="I'm a big slutty switch"
+        android:layout_columnWeight="1"
+        android:gravity="fill" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
-
-
+        android:layout_column="1"
+        android:layout_row="1"
+        android:src="@android:drawable/ic_menu_camera"
+        android:layout_columnWeight="1"
+        android:gravity="fill" />
 </GridLayout>
