--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:text="@string/Login"
-        android:textSize="50sp" />
+        android:layout_height="wrap_content"
+        android:text="@string/Login"/>
 
     <EditText
         android:id="@+id/plain_text_input"
@@ -22,9 +21,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:text="@string/Password"
-        android:textSize="50sp" />
+        android:layout_height="wrap_content"
+        android:text="@string/Password"/>
 
     <EditText
         android:layout_width="match_parent"
